--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 MAIL_USER =preashhemant@gmail.com
 MAIL_PASS =ywaxqdkzjichabhz
+CLOUD_NAME= dmrzlkwx4
+API_KEY_CLOUDINARY=136824458218583
+API_SECRET_CLOUDINARY=MPKajj9hX2AM_fjcNYG4fFIiDdA
